--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.8.1/localforage.js"></script>
     <script src="libraries/webgazer.js" type="text/javascript" ></script>
+    <script src="libraries/anime.min.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
